--- a/src/Candidate.Web/ClientApp/src/app/app.component.html
+++ b/src/Candidate.Web/ClientApp/src/app/app.component.html
@@ -1,4 +1,4 @@
-<mat-toolbar color="primary">
+<mat-toolbar color="primary" *ngIf="currentUser">
   <mat-toolbar-row>
     <h1>Candidates</h1>
     <span class="menu-spacer"></span>
