--- a/src/Candidate.Web/ClientApp/src/app/candidates/components/candidate-form/candidate-form.component.html
+++ b/src/Candidate.Web/ClientApp/src/app/candidates/components/candidate-form/candidate-form.component.html
@@ -1,5 +1,6 @@
 <form [formGroup]="candidateForm" (ngSubmit)="onSubmit()" class="form">
-  <h4>Create candidate</h4>
+  <h1 *ngIf="!isEdit">Create candidate</h1>
+  <h1 *ngIf="isEdit">Edit candidate</h1>
   <div class="form-row">
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>First Name</mat-label>
@@ -10,18 +11,18 @@
     </mat-form-field>
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>Last Name</mat-label>
-      <input matInput placeholder="Last Name" formControlName="lastName" required>
-      <mat-error *ngIf="candidateForm.get('lastName')?.hasError('required')">
-        Last Name is required
-      </mat-error>
+      <input matInput placeholder="Last Name" formControlName="lastName">
     </mat-form-field>
   </div>
   <div class="form-row">
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>Phone Number</mat-label>
-      <input matInput placeholder="Phone Number" formControlName="phoneNumber" required>
+      <input matInput placeholder="Phone Number" formControlName="phoneNumber" required appAllownumbersonly>
       <mat-error *ngIf="candidateForm.get('phoneNumber')?.hasError('required')">
         Phone Number is required
+      </mat-error>
+      <mat-error *ngIf="m['phoneNumber']?.hasError('pattern')">
+        Phone number is not 10 digit
       </mat-error>
     </mat-form-field>
     <mat-form-field appearance="outline" class="form-field">
@@ -42,17 +43,26 @@
     </mat-form-field>
     <mat-form-field appearance="outline" class="form-field">
       <mat-label>Experience (in years)</mat-label>
-      <input matInput placeholder="Experience (in years)" formControlName="experienceInYears" required>
+      <input matInput placeholder="Experience (in years)" formControlName="experienceInYears" required
+        appAllownumbersonly>
       <mat-error *ngIf="candidateForm.get('experienceInYears')?.hasError('required')">
         Experience is required
       </mat-error>
     </mat-form-field>
     <button type="button" mat-raised-button (click)="fileInput.click()">Choose File</button>
-    <input hidden (change)="onFileSelected()" #fileInput type="file" id="file">
+    <input hidden (change)="onFileSelected($event)" #fileInput type="file" id="file">
+    <mat-error *ngIf="invalidFile">
+      Please choose a .pdf document
+    </mat-error>
+    <div *ngIf="fileName">
+      <a [ngClass]="!isNewFileSelected?'pointer-link':'isDisabled'" (click)="downloadFile()">Selected File:
+        {{ fileName }}</a>
+    </div>
   </div>
 
   <div class="button-row" style="float: right; margin-right: 20px;">
-    <button mat-raised-button color="primary" type="button" style="margin-right: 10px;">Cancel</button>
-    <button mat-raised-button color="primary" type="submit">Save</button>
+    <button mat-raised-button color="primary" type="button" style="margin-right: 10px;"
+      (click)="onCancel()">Cancel</button>
+    <button mat-raised-button color="primary" type="submit">{{submitDisplayName}}</button>
   </div>
 </form>
